# imagelize

./: .clang-format  CMakeLists.txt  README.md  imagelize.hpp
ext/: stb_image.h
sample/: main.cpp
test/: 32bit.cpp  64bit.cpp  8bit.cpp  test.cpp
